@@ -1,3 +1,8 @@
+2007-04-23  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-settings-module.[ch] (gnome_settings_module_get_runlevel):
+	new method.
+
 2007-04-20  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-module.[ch]: new class for modules.
